--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "main": "index.js",
   "scripts": {
     "start": "npx tsc -b && node src/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon --ignore \"src/*.js\" src/index.ts"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/mongoose": "^5.11.96",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
