--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc -b && node src/index.js",
-    "dev": "nodemon --ignore \"src/*.js\" src/index.ts"
+    "start": "npx tsc -b && node dist/index.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
